--- a/JunSP13.html
+++ b/JunSP13.html
@@ -18,9 +18,7 @@
         <input type="text" id="search" />
         <button id="search">Buscar</button>
       </nav>
-      <nav>
-        <a v-for="l in nav" :href="l[0]">{{l[1]}}</a>
-      </nav>
+      <nav id="menu"></nav>
       <section class="textos-header">
         <h1>Contenido para JunSP13</h1>
       </section>
@@ -40,38 +38,21 @@
         <div class="centro" id="login"></div>
         <div class="contenedor">
           <div class="galeria-port">
-            <div v-for="value in json" class="imagen-port">
-              <img :src="value.icon" alt=""/>
-              <a id="login-download" :href="value.URL">
-                <div class="hover-galeria">
-                  <img src="/src/img/click.png" alt="" />
-                  <p>
-                    {{value.name}} ({{value.url ? 'Publico' : 'Privado'}})
-                  </p>
-                </div>
-              </a>
-            </div>
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <div class="contenedor-footer">
-        <div class="content-foo" v-for="link in footer">
-          <h4>{{link[0]}}</h4>
-          <a class="link-s" target="_blank" :href="link[1]">{{link[2]}}</a>
-        </div>
+      <div class="contenedor-footer"></div>
       </div>
     </footer></div>
     <div id="spinner">
       <div id="carga"></div>
     </div>
   </body>
-  <script src="/js/api/data.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="/js/api/show.js"></script>
-  <script src="/js/load.js"></script>
-  <script src="/js/login.js"></script>
-  <script src="/js/download.js"></script>
+	<script
+		src="/js/index.js"
+		type="module"
+	></script>
 </html>
 
